# gst-plugin-ebur128

./: .gitignore  COPYING  Makefile  README.md  meson.build
examples/: example.py
poc/: .gitignore  benchmark.py  data.py  example.py  requirements.txt
src/: gstebur128.c  gstebur128.h  gstebur128element.c  gstebur128element.h  gstebur128graph.c  gstebur128graph.h  gstebur128graphelement.c  gstebur128graphelement.h  gstebur128graphrender.c  gstebur128graphrender.h  gstebur128plugin.c  gstebur128shared.c  gstebur128shared.h  plugin.c  plugin.h
tests/: meson.build
tests/elements/: ebur128.c  ebur128graph.c
